@@ -53,6 +53,8 @@ debbugs (2.6.0~exp1) UNRELEASED; urgency=low
   * Pluralize singular tag and usertag in pseudoheaders (Closes: #861234).
     Thanks to James Clarke
   * Include link to the location of the debbugs source (Closes: #721569).
+  * Add envelope_from configuration variable so sites can set a valid return
+    path if the sendmail default is wrong. (Closes: #719205)
 
   [ Niels Thykier ]
   * quitcgi() now returns 400/500 status codes instead of 200 (Closes: #584922)
